unpackaged/main/default/objects/Engagement_Activity__c/Engagement_Activity__c.object-meta.xml
<CustomObject>
    <description>Shows the Activity and Participants for each Engagement Activity. It also has extra details.</description>
    <label>Engagement Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>