unpackaged/main/default/objects/Engagement_Activity__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>