unpackaged/main/default/objects/Engagement_Activity__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MembershipBased</fullName>
            </value>
            <value>
                <fullName>Pro rata</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>