unpackaged/main/default/objects/Engagement_Activity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>