unpackaged/main/default/objects/Engagement_Activity__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>A user supplied name for this activity (ex: &quot;Hotel Devreau&quot;)</description>
    <label>Location Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>