unpackaged/main/default/objects/Engagement_Activity__c/fields/Point_Of_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Email__c</fullName>
    <label>Point of Contact Email</label>
    <type>Email</type>
</CustomField>