unpackaged/main/default/objects/Engagement_Activity__c/fields/Point_Of_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact_Phone__c</fullName>
    <label>Point of Contact Phone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>