unpackaged/main/default/objects/Engagement_Activity__c/fields/Total_Number_of_All_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_All_Participants__c</fullName>
    <label>Headcount</label>
    <summarizedField>Activity_Participation__c.Total_Number_of_Participants__c</summarizedField>
    <summaryForeignKey>Activity_Participation__c.Engagement_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>