unpackaged/main/default/objects/Engagement_Activity__c/recordTypes/Engagement_Activity.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Activity</fullName>
    <active>true</active>
    <label>Engagement Activity</label>
</RecordType>