unpackaged/main/default/objects/Engagement_Activity__c/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <label>Meeting</label>
</RecordType>