unpackaged/main/default/objects/Engagement_Activity__c/recordTypes/Reception.recordType-meta.xml
<RecordType>
    <fullName>Reception</fullName>
    <active>true</active>
    <label>Reception</label>
</RecordType>