unpackaged/main/default/objects/Engagement_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Number_of_All_Participants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>